--- a/public/styles.css
+++ b/public/styles.css
@@ -61,7 +61,7 @@ label {
 }
 
 input {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   width: 250px;
   padding: 2px 5px 2px 5px;
 
@@ -90,4 +90,9 @@ button[type="submit"] {
 
 button[type="submit"]:hover {
   background-color: rgb(90, 90, 255);
+}
+
+.error {
+  color: red;
+  display: none;
 }
