--- a/views/form.ejs
+++ b/views/form.ejs
@@ -11,15 +11,18 @@
 </head>
 
 <body>
+  <% console.log("TODAY:" + today.toString()); %>
   <div class="dark-filter">
     <h1><span class="short-text italic">Welcome to</span><br>Flight<span class="italic">WISE</span></h1>
     <form autocomplete="off" action="/getPrices" method="POST">
       <label for="source">Which city will you fly from?</label>
       <input placeholder="Enter Source" name="source" type="text" id="source">
+      <p class="error" id="source-error">Enter a valid city</p>
       <label for="destination">What is your destination?</label>
       <input placeholder="Enter Destination" name="destination" type="text" id="destination">
+      <p class="error" id="destination-error">Enter a valid city</p>
       <label for="date">When do you plan to fly?</label>
-      <input name="date" type="date" id="date">
+      <input name="date" type="date" id="date" min="<%= today %>" value="<%= today %>">
       <button type="submit">Submit</button>
     </form>
   </div>
