--- a/public/styles.css
+++ b/public/styles.css
@@ -18,29 +18,10 @@ body {
 
   background: linear-gradient(to right, black, rgba(0, 0, 0, 0.281));
 
-  display: grid;
-  grid-template-columns: 50vw 50vw;
-}
-
-.left-col {
-  width: 50vw;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: start;
-
-  box-sizing: border-box;
-  padding-left: 20px;
-}
-
-.right-col {
-  width: 50vw;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: end;
 
   box-sizing: border-box;
   padding-left: 20px;
@@ -117,25 +98,11 @@ button[type="submit"]:hover {
 }
 
 .legs {
-  height: 250px;
-  width: 30vw;
+  width: 25vw;
 
-  overflow-y: scroll;
-  padding: 5px 100px 5px 10px;
+  margin-top: 20px;
 
   position: relative;
-}
-
-.legs::-webkit-scrollbar {
-  width: 5px;
-}
-
-.legs::-webkit-scrollbar-thumb {
-  background-color: blue;
-}
-
-.legs::-webkit-scrollbar-track {
-  background-color: white;
 }
 
 .fare {
@@ -150,11 +117,23 @@ button[type="submit"]:hover {
 .carrier,
 .charges {
   font-weight: bold;
-  font-size: 26px;
+  font-size: 20px;
   color: rgb(124, 124, 224);
 }
 
 .charges {
-  font-size: 24px;
+  font-size: 20px;
   color: white;
+}
+
+.heading {
+  font-size: 24px;
+  font-style: italic;
+  color: white;
+}
+
+.highlight {
+  font-style: normal;
+  color: blue;
+  font-weight: bold;
 }
